--- a/waterview.html
+++ b/waterview.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/waterview.js"></script>
   </head>
 
@@ -23,6 +30,24 @@
       <input type = "checkbox" id = "night" value = "on"> Night?
       <br><br>
       <input type= "button" value= "Send Query" onclick="submit()">
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li id="listcourse1" class="list-group-item"></li>
+        <li id="listcourse2" class="list-group-item"></li>
+        <li id="listcourse3" class="list-group-item"></li>
+        <li id="listcourse4" class="list-group-item"></li>
+        <li id="listcourse5" class="list-group-item"></li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
     </div>
 
   <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
