--- a/waterview.html
+++ b/waterview.html
@@ -32,25 +32,22 @@
       <input type= "button" value= "Send Query" onclick="submit()">
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li id="listcourse1" class="list-group-item"></li>
-        <li id="listcourse2" class="list-group-item"></li>
-        <li id="listcourse3" class="list-group-item"></li>
-        <li id="listcourse4" class="list-group-item"></li>
-        <li id="listcourse5" class="list-group-item"></li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
-      </div>
+    <div>
+      <table class="table table-sm">
+        <thead>
+          <tr>
+            <th scope="col">Course</th>
+            <th scope="col">Section</th>
+            <th scope="col">Enrolled</th>
+            <th scope="col">Time</th>
+            <th scope="col">Location</th>
+            <th scope="col">Instructor</th>
+            <th scope="col">Instructor Rating</th>
+          </tr>
+        </thead>
+        <tbody id='schedules'>
+        </tbody>
+      </table>
     </div>
-
-  <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
-  <div id="test"></div>
   </body>
 </html>
