Finished Printing Schedules.

--- a/waterview.html
+++ b/waterview.html
@@ -32,22 +32,6 @@
       <input type= "button" value= "Send Query" onclick="submit()">
     </div>
 
-    <div>
-      <table class="table table-sm">
-        <thead>
-          <tr>
-            <th scope="col">Course</th>
-            <th scope="col">Section</th>
-            <th scope="col">Enrolled</th>
-            <th scope="col">Time</th>
-            <th scope="col">Location</th>
-            <th scope="col">Instructor</th>
-            <th scope="col">Instructor Rating</th>
-          </tr>
-        </thead>
-        <tbody id='schedules'>
-        </tbody>
-      </table>
-    </div>
+    <div id='schedules'></div>
   </body>
 </html>
