--- a/waterview.html
+++ b/waterview.html
@@ -2,36 +2,71 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/waterview.js"></script>
   </head>
 
   <body>
-    <div id="form">
-      Term:<br>
-      <input type="text" id="term" value="1179"><br>
-      Course 1:<br>
-      <input type="text" id="course1" value="MATH239"><br>
-      Course 2:<br>
-      <input type="text" id="course2" value="STAT230"><br>
-      Course 3:<br>
-      <input type="text" id="course3" value="ECON102"><br>
-      Course 4:<br>
-      <input type="text" id="course4" value="CS245"><br>
-      Course 5:<br>
-      <input type="text" id="course5" value="CS246"><br>
-      <input type = "checkbox" id = "morning" value = "on"> 8:30?
-      <input type = "checkbox" id = "night" value = "on"> Night?
-      <br><br>
-      <input type= "button" value= "Send Query" onclick="submit()">
-    </div>
+    <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
+	<main class="mdl-layout__content">
+		<div style="width: 100%;" class="mdl-card mdl-shadow--6dp">
+			<div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+				<h2 class="mdl-card__title-text">WaterView</h2>
+			</div>
+	  	<div class="mdl-card__supporting-text">
+				<form action="#">
+					<div style="display: block" class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="term" value="1179"/>
+						<label class="mdl-textfield__label" for="term">Term</label>
+					</div>
+					<div style="display: block" class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="course1" value="MATH239"/>
+						<label class="mdl-textfield__label" for="course1">Course 1</label>
+					</div>
+          <div  style="display: block"class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="course2" value="STAT230"/>
+						<label class="mdl-textfield__label" for="course2">Course 2</label>
+					</div>
+          <div style="display: block" class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="course3" value="ECON102"/>
+						<label class="mdl-textfield__label" for="course3">Course 3</label>
+					</div>
+          <div style="display: block" class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="course4" value="CS245"/>
+						<label class="mdl-textfield__label" for="course4">Course 4</label>
+					</div>
+          <div style="display: block" class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" id="course5" value="CS246"/>
+						<label class="mdl-textfield__label" for="course5">Course 5</label>
+					</div>
+          <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="morning">
+            <input type="checkbox" id="morning" class="mdl-checkbox__input" />
+            <span class="mdl-checkbox__label">8:30?</span> <!-- Checkbox Label -->
+          </label>
+          <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="night">
+            <input type="checkbox" id="night" class="mdl-checkbox__input" />
+            <span class="mdl-checkbox__label">Night?</span> <!-- Checkbox Label -->
+          </label>
+				</form>
+			</div>
+			<div class="mdl-card__actions mdl-card--border">
+				<button onclick="submit()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+          Generate Schedules
+        </button>
+			</div>
+      <div id='loading' style='display: none' class="mdl-spinner mdl-js-spinner is-active"></div>
+      <div id='schedules'></div>
+		</div>
+	</main>
+</div>
 
-    <div id='schedules'></div>
+
   </body>
 </html>
