--- a/waterview.html
+++ b/waterview.html
@@ -62,10 +62,7 @@
         </div>
         <div style="width: 50%; float:right;">
           <div style="width: 50%;" class="mdl-card__supporting-text">
-            <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
-            <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
-            <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
-            <input class="mdl-slider mdl-js-slider" type="range" min="0" max="100" value="25" tabindex="0">
+            <input class="mdl-slider mdl-js-slider" type="range" min="0" max="10" value="5" tabindex="0" step="1">
     			</div>
         </div>
       </div>
@@ -74,7 +71,7 @@
           Generate Schedules
         </button>
 			</div>
-      <div id='loading' style='display: none' class="mdl-spinner mdl-js-spinner is-active"></div>
+      <div id='loading' class="mdl-spinner mdl-js-spinner is-active"></div>
       <div id='schedules'></div>
 		</div>
 	</main>
