--- a/waterview.html
+++ b/waterview.html
@@ -71,7 +71,10 @@
           Generate Schedules
         </button>
 			</div>
-      <div id='loading' class="mdl-spinner mdl-js-spinner is-active"></div>
+      <div id="loading" style='margin-left: auto; margin-right: auto; display:none;'>
+        <div id='spinner' class="mdl-spinner mdl-js-spinner is-active"></div>
+        <div style='margin-left: auto; margin-right: auto; text-align: center;'>Loading...</div>
+      </div>
       <div id='schedules'></div>
 		</div>
 	</main>
