--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="./css/waterview.css">
-    <link rel="stylesheet" href="./css/getmdl-select.min.css">
-    <script defer src="./js/getmdl-select.min.js"></script>
+    <link rel="stylesheet" href="node_modules/getmdl-select/getmdl-select.min.css">
+    <script defer src="node_modules/getmdl-select/getmdl-select.min.js"></script>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
