--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <p>TESTING UPDATE</p>
     <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
     	<main class="mdl-layout__content">
     		<div style="width: 100%;" class="mdl-card mdl-shadow--6dp">
