Added copy to clipboard functionality.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-    <p>TESTING UPDATE</p>
     <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
     	<main class="mdl-layout__content">
     		<div style="width: 100%;" class="mdl-card mdl-shadow--6dp">
@@ -103,5 +102,6 @@
     <script src="./js/handleInput.js"></script>
     <script src="./js/generateSchedules.js"></script>
     <script src="./js/printSchedules.js"></script>
+    <script src="./js/copyToClipboard.js"></script>
   </body>
 </html>
