--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="./css/waterview.css">
     <link rel="stylesheet" href="node_modules/getmdl-select/getmdl-select.min.css">
+    <link rel="stylesheet" href="./css/mdl-jquery-modal-dialog.css">
     <script defer src="node_modules/getmdl-select/getmdl-select.min.js"></script>
-
+    <script defer src="./js/mdl-jquery-modal-dialog.js"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
