--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <link rel="stylesheet" href="./css/waterview.css">
     <link rel="stylesheet" href="node_modules/getmdl-select/getmdl-select.min.css">
     <link rel="stylesheet" href="./css/mdl-jquery-modal-dialog.css">
+    <link rel="stylesheet" href="./css/waterview.css">
     <script defer src="node_modules/getmdl-select/getmdl-select.min.js"></script>
     <script defer src="./js/mdl-jquery-modal-dialog.js"></script>
     <!-- jQuery library -->
@@ -68,7 +68,7 @@
                   <p>2. Select all and copy. (List View)</p>
                   <p>3. Paste into the box below!</p>
                   <p>4. Click the "Generate Schedules" button below.</p>
-                  <div style="width: 100%;" class = "mdl-textfield mdl-js-textfield">
+                  <div id="questBox" style="width: 100%;" class = "mdl-textfield mdl-js-textfield">
                      <textarea class="mdl-textfield__input" type="text" rows="11" id="importQuest"></textarea>
                      <label class = "mdl-textfield__label" for = "text7">Paste Here!</label>
                   </div>
