--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
               Generate Schedules
             </button>
     			</div>
-          <div id="loading" style='margin-left: auto; margin-right: auto; display:none;'>
+          <div id="loading" style='height: 90px; margin-left: auto; margin-right: auto; display:none;'>
             <div id='spinner' class="mdl-spinner mdl-js-spinner is-active"></div>
-            <p style='margin-left: auto; margin-right: auto; text-align: center;'>Loading...</p>
+            <div style="z-index: 999; margin-top: -55px;">
+              <p style='margin-left: auto; margin-right: auto; text-align: center;'>Loading</p>
+            </div>
           </div>
           <div id='schedules'></div>
     		</div>
