--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<main class="mdl-layout__content">
     		<div style="width: 100%;" class="mdl-card mdl-shadow--6dp">
     			<div class="mdl-card__title mdl-color--primary mdl-color-text--white">
-    				<h2 class="mdl-card__title-text">WaterView</h2>
+    				<h2 class="mdl-card__title-text">UWScheduler</h2>
     			</div>
           <div>
             <div style="width: 50%; height: auto; float:left;">
