--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               <p style='margin-left: auto; margin-right: auto; text-align: center;'>Loading</p>
             </div>
           </div>
+          <div id="noResults"><p style='margin-left: auto; margin-right: auto; text-align: center; display: none;'>Loading</p></div>
           <div id='schedules'></div>
     		</div>
     	</main>
