Fixed Date Calculation

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                   <p id="professorWeight">5</p>
                 </div>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="morning">
-                  <input type="checkbox" id="morning" class="mdl-checkbox__input" />
+                  <input type="checkbox" id="morning" class="mdl-checkbox__input" checked />
                   <span class="mdl-checkbox__label">Allow 8:30AM Classes?</span> <!-- Checkbox Label -->
                 </label>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="night">
-                  <input type="checkbox" id="night" class="mdl-checkbox__input" />
+                  <input type="checkbox" id="night" class="mdl-checkbox__input" checked />
                   <span class="mdl-checkbox__label">Allow Night Classes? (After 6:00PM)</span> <!-- Checkbox Label -->
                 </label>
         			</div>
