--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src='fullcalendar/lib/jquery.min.js'></script>
     <script src='fullcalendar/lib/moment.min.js'></script>
     <script src='fullcalendar/fullcalendar.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script defer src="node_modules/getmdl-select/getmdl-select.min.js"></script>
     <script defer src="./js/mdl-jquery-modal-dialog.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -135,6 +136,47 @@
           </div>
         </main>
       <div id="noResults"><p style='margin-left: auto; margin-right: auto; text-align: center; display: none;'>Loading</p></div>
+      <div class="mdl-card mdl-shadow--4dp">
+        <div class="mdl-card__title">
+          <h2 class="mdl-card__title-text">Overall Rating: 67</h2>
+        </div>
+        <div class="mdl-card__media">
+            <canvas id="myChart"></canvas>
+        </div>
+        <div class="mdl-card__supporting-text">
+            <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+                <thead>
+                  <tr>
+                    <th class="mdl-data-table__cell--non-numeric">Course</th>
+                    <th class="mdl-data-table__cell--non-numeric">Time</th>
+                    <th class="mdl-data-table__cell--non-numeric">Instructor</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="mdl-data-table__cell--non-numeric">CS343</td>
+                    <td class="mdl-data-table__cell--non-numeric">14:30 - 15:50 TTh</td>
+                    <td class="mdl-data-table__cell--non-numeric">Buhr, Peter A</td>
+                  </tr>
+                  <tr>
+                    <td class="mdl-data-table__cell--non-numeric">CS349</td>
+                    <td class="mdl-data-table__cell--non-numeric">11:30 - 12:20 MWF</td>
+                    <td class="mdl-data-table__cell--non-numeric">Avery, Jeffery</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            View Schedule
+          </a>
+        </div>
+        <div class="mdl-card__menu">
+          <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">share</i>
+          </button>
+        </div>
+      </div>
       <div id='schedules'></div>
     </div>
     <script src="./js/handleInput.js"></script>
