Minor Styling on Input Form

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <li class="mdl-menu__item" data-val="7">7</li>
                       </ul>
                     </div>
+                    <div id="coursesInput"></div>
                   </form>
                   <form id="importForm" action = "#" style="display: none">
                     <p>1. <a href="https://quest.pecs.uwaterloo.ca/psp/SS/?cmd=login&languageCd=ENG" target="_blank">Sign in to Quest</a>
